role alignment fix

--- a/styles.css
+++ b/styles.css
@@ -356,6 +356,7 @@ button.theme .material-symbols-outlined{
   font-family: monospace;
   letter-spacing: -1px;
   height: 2rem;
+  align-items: center;
 }
 .hero-heading .summary-role span{
   margin-right: 10px;
